<resources>
    <string name="app_name">VadaBarber</string>
    <string name="titulo_principal">VADA BARBER</string>
    <string name="text_nombre">Nombre</string>
    <string name="text_correo">Correo electrónico</string>
    <string name="text_psswd">Contraseña</string>
    <string name="btn_registro">REGISTRARSE</string>
    <string name="btn_login">INICIAR SESION</string>
    <string name="btn_reg_log">¿Ya tienes una cuenta?\nInicia sesion</string>
    <string name="btn_log_reg">¿No tienes una cuenta?\nRegístrate</string>
    <string name="text_bienvenida">Bienvenido {user}</string>
    <string name="text_btn_reserva">Reserva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>